# BroCOLI

./: BroCOLI2scanpy.py  CMakeLists.txt  Matrix2sparse.py  README.md  build.sh  ext_bc_and_umi.py  zensical.toml
.github/workflows/: docs.yml
docs/: Tutorials.md  analysis.md  index.md  output.md
src/: BroCOLI_Bulk.cpp  BroCOLI_SingleCell.cpp  BroCOLI_bulk.cpp  BroCOLI_sc.cpp
